--- a/Loop/de.lproj/Main.strings
+++ b/Loop/de.lproj/Main.strings
@@ -38,7 +38,7 @@
 "BR0-dr-Fj2.accessibilityLabel" = "Einheiten";
 
 /* Class = "UILabel"; text = "U"; ObjectID = "BR0-dr-Fj2"; */
-"BR0-dr-Fj2.text" = "U";
+"BR0-dr-Fj2.text" = "E";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "cpo-Po-gFM"; */
 "cpo-Po-gFM.text" = "Beschriftung";
