--- a/Loop/nl.lproj/Main.strings
+++ b/Loop/nl.lproj/Main.strings
@@ -113,7 +113,7 @@
 "Rse-x8-amW.text" = "uiteindelijk 92 mg/dL";
 
 /* Class = "UILabel"; text = "g COB"; ObjectID = "SQx-au-ZcM"; */
-"SQx-au-ZcM.text" = "gr KaB";
+"SQx-au-ZcM.text" = "g KaB";
 
 /* Class = "UILabel"; text = "Glucose"; ObjectID = "tuw-av-A3x"; */
 "tuw-av-A3x.text" = "Glucose";
