--- a/LoopUI/nb.lproj/Localizable.strings
+++ b/LoopUI/nb.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "%@ ago" = "%@ ago";
 
 /* The format string describing the basal rate. */
-"%@ U" = "%@ U";
+"%@ U" = "%@ E";
 
 /* Format string for reservoir volume. (1: The localized volume) */
 "%@U" = "%@U";
@@ -17,7 +17,7 @@
 "%1$@ units remaining at %2$@" = "%1$@ units remaining at %2$@";
 
 /* Accessibility hint describing completion HUD for a closed loop */
-"Closed loop" = "Closed loop";
+"Closed loop" = "Lukket Loop";
 
 /* The short unit display string for decibles */
 "dB" = "dB";
@@ -26,7 +26,7 @@
 "g" = "g";
 
 /* Accessbility format label describing the time interval since the last completion date. (1: The localized date components) */
-"Loop ran %@ ago" = "Loop ran %@ ago";
+"Loop ran %@ ago" = "Loop kjørte %@ ago";
 
 /* The short unit display string for milligrams of glucose per decilter */
 "mg/dL" = "mg/dL";
@@ -35,20 +35,20 @@
 "mmol/L" = "mmol/L";
 
 /* Accessibility label component for glucose HUD describing an invalid state */
-"Needs attention" = "Needs attention";
+"Needs attention" = "Trenger Tilsyn";
 
 /* Accessbility hint describing completion HUD for an open loop */
-"Open loop" = "Open loop";
+"Open loop" = "Åpen Loop";
 
 /* Format string for combining localized numeric value and unit. (1: numeric value)(2: unit) */
 "QUANTITY_VALUE_AND_UNIT" = "%1$@ %2$@";
 
 /* The short unit display string for international units of insulin */
-"U" = "U";
+"U" = "E";
 
 /* Accessibility value for an unknown value */
-"Unknown" = "Unknown";
+"Unknown" = "Ukjent";
 
 /* Acessibility label describing completion HUD waiting for first run */
-"Waiting for first run" = "Waiting for first run";
+"Waiting for first run" = "Venter på første kjøring";
 
