--- a/WatchApp Extension/it.lproj/Localizable.strings
+++ b/WatchApp Extension/it.lproj/Localizable.strings
@@ -1,11 +1,11 @@
 /* The title of the alert controller displayed after a bolus attempt fails */
-"Bolus Failed" = "Bolus Failed";
+"Bolus Failed" = "Bolo Fallito";
 
 /* The short unit display string for decibles */
 "dB" = "dB";
 
 /* The action button title to dismiss an error message */
-"Dismiss" = "Dismiss";
+"Dismiss" = "Rimuovere";
 
 /* The short unit display string for grams */
 "g" = "g";
@@ -13,7 +13,7 @@
 /* The recovery message displayed after a bolus attempt fails
    The recovery message displayed after a carb entry send attempt fails
    The recovery message displayed after a glucose range override send attempt fails */
-"Make sure your iPhone is nearby and try again" = "Make sure your iPhone is nearby and try again";
+"Make sure your iPhone is nearby and try again" = "Assicurati che il tuo iPhone si trovi nelle vicinanze e riprova";
 
 /* The short unit display string for milligrams of glucose per decilter */
 "mg/dL" = "mg/dL";
@@ -25,11 +25,11 @@
 "QUANTITY_VALUE_AND_UNIT" = "%1$@ %2$@";
 
 /* The label and value showing the recommended bolus */
-"Rec: %@ U" = "Rec: %@ U";
+"Rec: %@ U" = "Consigliato: %@ U";
 
 /* The title of the alert controller displayed after a carb entry send attempt fails
    The title of the alert controller displayed after a glucose range override send attempt fails */
-"Send Failed" = "Send Failed";
+"Send Failed" = "Invio Fallito";
 
 /* The short unit display string for international units of insulin */
 "U" = "U";
